# tech-coach-examples

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: tests.yml
automation/notebook_runner/: notebook_runner.py
automation/notebook_runner/notebooks/: common_data.ipynb  notebook1.ipynb  notebook2.ipynb  notebooks.ini
automation/papermill/: papermill_child1.py  papermill_child2.py  papermill_parent.py
config/: config.py  config.toml  settings.toml
config_examples/: ConfigReader.py  README.md  config_example.py
jupyter/: jupytext_ipynb.ipynb  jupytext_ipynb.py  modin.ipynb
parquet/: README.md  dataset.md  dataset.py  parquet.md  parquet_index.py  parquet_metadata.py  queries_duckdb.py  queries_pandas.py  sqltest.py
parquet/dataset/: categories.csv
secret/: file_encryption.py  google_secret_manager.py
src/automation/: automation.md
src/automation/notebook_runner/notebooks/: common_data.ipynb  notebook1.ipynb
src/automation/papermill/: papermill_child1.py  papermill_child2.py  papermill_parent.py
src/automation/pythonfunctions/: child1.py  child2.py  parent.py
src/config_examples/: ConfigReader.py  README.md  config_example.py
src/jupyter/: jupytext_ipynb.ipynb  jupytext_ipynb.py  rwrapr_example.py
src/logging/: README.md  gcp_logger.py  log_demo.py  log_gcp.py  log_processdata.py  log_receiver.py  log_sender.py  process_data.py  quality_control_data.py  ssb_logger.py  statlogger.py
src/notebooks/: 00_imports.ipynb  modin.ipynb
src/parquet/: dataset.md  dataset.py  parquet_metadata.py  queries_pandas.py  sqltest.py
src/parquet/dataset/: customers.csv  details.csv  orders.csv  products.csv
src/pytest_examples/: README.md  functions.py  notebook_example.py
src/secret/: file_encryption.py  google_secret_manager.py
tests/: __init__.py  conftest.py  replace_org_info.py  test_fizzbuzz.py  test_functions.py  test_parquet_metadata.py  test_ssb_logger.py  test_statlogger.py
tests/ipydatagrid/: DataGridTest.py  cars.json
tests/testdata/: valuta_omv_exchange_rates.parquet  valuta_omv_facit.parquet  valuta_omv_inndata.parquet
