[tool.poetry]
name = "tech-coach-examples"
version = "0.1.0"
description = ""
authors = ["Arne Sørli <81353974+arneso-ssb@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
modin = {extras = ["ray"], version = ">=0.22.2"}

[tool.poetry.group.dev.dependencies]
black = {extras = ["d", "jupyter"], version = "^23.3.0"}
ipykernel = "^6.22.0"
isort = "^5.12.0"
jupyterlab = ">=3.6.3,<4.0" # Jupytext does not work with > 4 yet, see  https://github.com/mwouts/jupytext/issues/1054
jupytext = "^1.14.6"
nbstripout = "^0.6.1"
pre-commit = "^3.3.1"
pre-commit-hooks = "^4.4.0"
pytest = "^7.3.1"

# Uncomment this section when working in the production zone
# [[tool.poetry.source]]
# name = "nexus"
# url = "http://pl-nexuspro-p.ssb.no:8081/repository/pypi-proxy/simple"
# default = true
# secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true
lines_after_imports = 2
# The line below is needed for jupyter notebooks stored as .py in percent format.
# See https://github.com/PyCQA/isort/issues/1338 for details
treat_comments_as_code = ["# %%"]

[tool.jupytext]
formats = "ipynb,auto:percent"
notebook_metadata_filter = "jupytext.text_representation,-jupytext.text_representation.jupytext_version,-widgets,-varInspector,-kernelspec"
cell_metadata_filter = "-all"
